# sound-termometer

./: README.md  pyproject.toml
config/: main.yaml
notebooks/: train_binary.ipynb  water-sound-classification.ipynb
src/: __init__.py  augment.py  datagenerator.py  load.py  preprocess.py  util.py
tests/: test_sound_termometer.py
