[tool.poetry]
name = "sound-termometer"
version = "0.1.0"
description = ""
authors = ["Wojciech Maczka <wojciech.channel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
jupyter = "^1.0.0"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
tensorflow = "^2.9.1"
librosa = "^0.9.1"
hydra-core = "^1.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
